--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -51,6 +51,9 @@
 							url="#{request.contextPath}/pages/importar_dados.xhtml" />
 						<p:menuitem value="Compradores Conjuntos"
 							url="#{request.contextPath}/pages/controle_comprador_conjunto.xhtml" />
+						<p:menuitem value="Adicionar Usuário"
+							url="#{request.contextPath}/pages/adicionar_usuario.xhtml" />
+						<p:menuitem value="Sair" action="#{loginBean.deslogar}" update="@all"/>
 					</p:submenu>
 
 				</p:menubar>
