--- a/Gerenciador/src/main/webapp/pages/pesquisar_compras.xhtml
+++ b/Gerenciador/src/main/webapp/pages/pesquisar_compras.xhtml
@@ -12,10 +12,11 @@
 			<p:messages showIcon="true" closable="true" showDetail="true" />
 			<h:panelGrid columns="1">
 
+				<h:panelGrid>
+					<p:outputLabel value="Cliente:" />
+				</h:panelGrid>
 				<h:panelGrid columns="2">
-
 					<h:panelGrid columns="2">
-						<p:outputLabel value="Cliente:" />
 						<p:inputText size="30"
 							value="#{pesquisarComprasController.nomeClientePesquisa}" />
 					</h:panelGrid>
