--- a/Gerenciador/src/main/webapp/pages/importar_dados.xhtml
+++ b/Gerenciador/src/main/webapp/pages/importar_dados.xhtml
@@ -10,8 +10,7 @@
 	<ui:define name="content">
 		<h:form enctype="multipart/form-data">
 
-			<p:messages showIcon="true" closable="true" showDetail="true"
-				id="sucesso" />
+			<p:messages showIcon="true" closable="true" showDetail="true" />
 
 			<h:panelGrid columns="1" cellpadding="10">
 
