--- a/Gerenciador/src/main/webapp/pages/pesquisar_compras.xhtml
+++ b/Gerenciador/src/main/webapp/pages/pesquisar_compras.xhtml
@@ -167,7 +167,7 @@
 
 			</h:panelGrid>
 
-			<p:dialog id="dialogPagamento" widgetVar="dialogPagamento"
+			<p:dialog id="dialogPagamento" widgetVar="dialogPagamento" header="Pagamento"
 				resizable="false" draggable="false" modal="true">
 				<h:panelGrid columns="2">
 					<p:outputLabel value="Valor: " />
