--- a/Gerenciador/src/main/webapp/pages/menu.xhtml
+++ b/Gerenciador/src/main/webapp/pages/menu.xhtml
@@ -53,7 +53,8 @@
 							url="#{request.contextPath}/pages/controle_comprador_conjunto.xhtml" />
 						<p:menuitem value="Adicionar Usuário"
 							url="#{request.contextPath}/pages/adicionar_usuario.xhtml" />
-						<p:menuitem value="Sair" action="#{loginBean.deslogar}" update="@all"/>
+						<p:menuitem value="Sair" action="#{loginBean.deslogar}"
+							update="@all" />
 					</p:submenu>
 
 				</p:menubar>
