Pesquisa de cheques

--- a/Gerenciador/src/main/webapp/pages/controle_cheques_inserir.xhtml
+++ b/Gerenciador/src/main/webapp/pages/controle_cheques_inserir.xhtml
@@ -9,6 +9,7 @@
 
 	<ui:define name="content">
 		<h:form>
+			<p:messages showIcon="true" closable="true" showDetail="true" />
 
 			<h:panelGrid columns="1">
 
